# Stemweb

./: .env.example  .gitignore  DockerExampleCommands.txt  Dockerfile  Dockerfile.single  Dockerfile_mysql  Dockerfile_mysql_vscdebug  Dockerfile_newCelery  README  apt_sources.list  checknex.py  createMysqlDBandUserWithGrants.sql  docker-compose.yml  docker-entrypoint.sh  funf81.r  lstrings_empty.py  manage.py  settings.py  stemweb_Documentation.odt  urls.py
Stemweb/: __init__.py  _celery.py  local_settings.py  local_settings_empty.py  settings.py  urls.py
algorithms/: admin.py  concurrent_algorithm.py  execute_algorithm.py  forms.py  models.py  saveres.py  semstem.py  settings.py  stoppable_algorithm  stoppable_algorithm.py  tasks.py  tests.py  urls.py  utils.py  views.py
algorithms/rhm/: Makefile  Makefile.in  Makefile.orig  NCD  NCD.c  adddottxt.sh  binary_sankoff.py  binarysankoff  binarysankoff.c  binarysankoff_osx.c  binarysankoff_python.c  c_test.py  colornodes.sh  compose.sh  config.h.in  configure  configure.in  rhmrun.sh  sankoff-tree.fig.bak  test.sh  tres.sh
algorithms/rhm/autom4te.cache/: output.0  requests  traces.0  traces.1
algorithms/rhm/test/: AW
client/: Dockerfile  app.py
django_proto/: file_operations.py  forms.py  handler.py  models.py  pyper_runs_yuan.py  rpy2_scripts.py  run_scripts.py  saveres.py  views.py
docker/: .env  docker-compose.yml
file_management/: urls.py  views.py
files/: fields.py  forms.py  models.py  urls.py  utils.py  views.py
home/: views.py
local/: lstrings_empty.py
media/: README
redisinit/: redis.conf
(+369 files in other folders)
